fixes scroll on mobile recent_works

--- a/app/assets/stylesheets/works.css.scss
+++ b/app/assets/stylesheets/works.css.scss
@@ -588,7 +588,9 @@ and (min-device-width : 320px) {
 @media only screen and
 (min-device-width : 480px) {
 
-
+  .past_work_image, .collection.cf {
+    width: 400px;
+  }
 
 
 }
